Fix(product): 바운딩 박스 상자 z-index 수정

--- a/src/style-product/scss/pages/_studio.scss
+++ b/src/style-product/scss/pages/_studio.scss
@@ -1059,7 +1059,7 @@
   height: 9px;
   border: 1px solid $secondary;
   background: $ui-01;
-  z-index: 5;
+  z-index: 7;
 }
 
 .canvas-object--active span.tl {
